Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132273

Quick3D runtime error with gcc >=12.1

XMLWordPrintable

    • e241dd6d3 (dev), 05877cd05 (6.9), a09811d5f (6.8)

      Quick 3D compiled with gcc 12 or newer runs into this error. This is a bug in GCC:
      https://gcc.gnu.org/bugzilla/show_bug.cgi?id=118047

      But maybe we could do something in Qt to workaround this or at least make it fail at build time.

      Unexpected condition met: "renderableModelStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 503
      Unexpected condition met: "modelContextStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 504
      Unexpected condition met: "renderableObjectStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 505
      Unexpected condition met: "screenTextureObjectStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 506
      Unexpected condition met: "opaqueObjectStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 507
      Unexpected condition met: "transparentObjectStore.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 508
      Unexpected condition met: "sortedOpaqueObjectCache.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 509
      Unexpected condition met: "sortedTransparentObjectCache.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 510
      Unexpected condition met: "sortedScreenTextureObjectCache.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 511
      Unexpected condition met: "sortedOpaqueDepthPrepassCache.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 512
      Unexpected condition met: "sortedDepthWriteCache.size() == extContexts.size()" in file C:/Users/qt/work/qt/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp, line 513
      

        For Gerrit Dashboard: QTBUG-132273
        # Subject Branch Project Status CR V

            stromme Christian
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes